frontend/test/should_pass/exectype_AssignSetmapEmptyToVar.grg
using exectype;

rule r
{
	modify  {
		exec(x:set<foo> =set<foo> && y:map<AA,HH> =map<AA,HH> ;> b:boolean=x.empty() || b=y.empty());
	}
}