frontend/test/should_fail/exectype_InSetmap3.grg
using exectype;

rule r
{
	modify  {
		exec(x:set<AA> =set<AA> && y:A=vari && y in x);
	}
}